# registrator

./: LICENSE  README.md  pyproject.toml
src/: registrator.py
src/registrator/: registrator.py
